# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Dana Runge
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-dmx-transmitter"
description = "DMX512 lighting protocol transmitter on the RP2040"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Dana Runge", email = "7285068+mydana@users.noreply.github.com"}
]
urls = {Homepage = "https://github.com/mydana/CircuitPython_DMX_Transmitter"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "dmx-transmitter",
    "DMX",
    "DMX512",
    "RP2040",
    "PIO",
    "RS485",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["dmx_transmitter"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
